--- a/.github/workflows/update_rates.yml
+++ b/.github/workflows/update_rates.yml
@@ -2,8 +2,8 @@ name: Update Exchange Rates
 
 on:
   schedule:
-    # Ejecuta todos los días a las 8:00 AM UTC (3:00 AM hora de Colombia)
-    - cron: '0 8 * * *'
+    # Ejecuta cada hora 
+    - cron: '0 * * * *'
   workflow_dispatch:  # Permite ejecución manual
 
 jobs:
